fix: scrollbar styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,11 +23,6 @@
   border-radius: 10px;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
-}
-
 body {
   font-family: "Poppins", "sans-serif";
 }
